migrating to java 10